--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.21.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "path": "^0.12.7",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
