--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "src/application/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest -i"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.25.9",
     "@prisma/client": "^5.20.0",
+    "babel-jest": "^29.7.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.0",
@@ -26,7 +33,9 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/joi": "^17.2.3",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "prisma": "^5.20.0"
+    "prisma": "^5.20.0",
+    "supertest": "^7.0.0"
   }
 }
